--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stylelint": "stylelint '**/*.scss'",
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
@@ -40,10 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.13.10",
-    "eslint": "^7.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.11.x",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "2.22.x",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
