--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "stylelint": "stylelint '**/*.scss'",
+    "stylelint": "stylelint '**/*.{css,scss}'",
     "eslint": "eslint ."
   },
   "eslintConfig": {
